Parametrização do consumo da fila

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,16 @@
 message.broker.protocol = amqps
 message.broker.port = 
 message.broker.host = 
-message.broker.user = 
-message.broker.password = 
 message.broker.parameters = amqp.idleTimeout=60000&jms.prefetchPolicy.queuePrefetch=1&jms.redeliveryPolicy.maxRedeliveries=10&transport.trustAll=true&transport.verifyHost=false
-message.broker.connect.uri = ${message.broker.protocol}://${message.broker.host}:${message.broker.port}?${message.broker.parameters}
-message.broker.purchaseorder.address=camel.test
-message.broker.purchaseorder.queue=sub.camel.test
+message.broker.camel.address=camel.test
+message.broker.camel.queue=sub.camel.test
 
 # Configures the Qpid JMS properties.
-quarkus.qpid-jms.url=
+quarkus.qpid-jms.url=${message.broker.protocol}://${message.broker.host}:${message.broker.port}?${message.broker.parameters}
 quarkus.qpid-jms.username=
 quarkus.qpid-jms.password=
 
-route.amqp.queue=jms://queue:${message.broker.purchaseorder.address}::${message.broker.purchaseorder.queue}?listenerConnectionFactory=#jmsConnectionFactory&transacted=true&testConnectionOnStartup=true
 
+# Camel Route endpoints
+route.jms.queue.id=jms-queue
+route.jms.queue.uri=jms://queue:camel.test::sub.camel.test?transacted=true&testConnectionOnStartup=true
