Using PooledConnectionFactory to deal with the connection renew by second

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,11 @@ message.broker.parameters = amqp.idleTimeout=60000&jms.prefetchPolicy.queuePrefe
 message.broker.camel.address=camel.test
 message.broker.camel.queue=sub.camel.test
 
-# Configures the Qpid JMS properties.
-quarkus.qpid-jms.url=${message.broker.protocol}://${message.broker.host}:${message.broker.port}?${message.broker.parameters}
-quarkus.qpid-jms.username=
-quarkus.qpid-jms.password=
-
+# Configures a custom Qpid JMS ConnectionFactory properties.
+app.jms.broker.url=${message.broker.protocol}://${message.broker.host}:${message.broker.port}?${message.broker.parameters}
+app.jms.broker.username=
+app.jms.broker.password=
 
 # Camel Route endpoints
 route.jms.queue.id=jms-queue
-route.jms.queue.uri=jms://queue:camel.test::sub.camel.test?transacted=true&testConnectionOnStartup=true
+route.jms.queue.uri=jms://queue:camel.test::sub.camel.test?transacted=true&testConnectionOnStartup=true&connectionFactory=#jmsConnectionFactory
